FP-1083: Fix DF sidebar link color contrast
- Update hover and active states to pass color contrast.

--- a/client/src/components/DataFiles/DataFilesSidebar/DataFilesSidebar.scss
+++ b/client/src/components/DataFiles/DataFilesSidebar/DataFilesSidebar.scss
@@ -15,10 +15,12 @@
   min-width: var(--min-width);
 
   padding-left: var(--horizontal-buffer);
-  color: #707070;
+  color: var(--global-color-primary--dark);
 }
 
-.data-files-sidebar .nav-link.active {
+.data-files-sidebar .nav-link.active,
+.data-files-sidebar .nav-link:hover {
+  color: var(--global-color-primary--x-dark);
   background: var(--global-color-accent--weak);
 }
 
